--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
     "multer": "^1.4.5-lts.1",
     "tslib": "^2.4.0",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.20.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0"
   }
 }
