--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "cross-env": "^7.0.3",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
-    "ejs": "~2.6.1",
+    "ejs": "^3.1.7",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "imgur": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.3",
+    "mongoose": "^6.4.6",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "tslib": "^2.4.0",
